News file for Stow.

* Changes in version 2.1.4

** Remove -a option (--adopt still available)

   As --adopt is the only option which allows stow to modify files, it
   is considered potentially dangerous (especially for stow package
   directories which are not managed by a version control system).
   Therefore it seems prudent to require a bit more effort from the
   user to enable this option, minimising the change of enabling it
   via a typo.

** Improve error message when stow package is not found.

   The error message displayed a path to the missing stow package
   which was relative to the target directory rather than the cwd,
   which was confusing for the user.

** Test suite improvements

   The test suite has been tightened up slightly.

** Documentation improvements

   Various fixes and cosmetic improvements have been made in the manual.

** Remove "There are no outstanding operations to perform" warning.

* Changes in version 2.1.3

** New --adopt / -a option

   This allows plain files in the target to be "adopted" into the
   package being stowed.  See the manual has more details.

** ./configure now checks for Perl modules required by the test suite.

* Changes in version 2.1.2

  Many thanks to Stefano Lattarini for help with numerous autoconf and
  automake issues which are addressed in this release.

** Significantly improve the handling of --with-pmdir.

*** Calculation of the default value for --with-pmdir is now done safely in Perl.

    Previously non-POSIX-compliant shells could cause issues.

*** The output of ./configure and make are now much more helpful.

*** The Makefile will now check whether pmdir is in Perl's built-in @INC.

    If not, it will insert a

      use lib "...";

    line into the generated stow script to ensure that it can always
    locate the Perl modules without needing to manually set PERL5LIB.

*** Updated INSTALL and HOWTO-RELEASE accordingly.

** ./configure now aborts if Perl isn't found.
